# McSolverEngine

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  License.md  McSolverEngine_C_API.en.md  McSolverEngine_C_API.md  McSolverEngine_PRD.md  Plan.md  REPOSITORY.md  pixi.toml
.github/: copilot-instructions.md
apps/: mcsolverengine_cli.cpp
docs/: cross_sketch_cascade_update_design.md
fcstdDoc/: 1.FCStd  1.brp  1.xml  2.FCStd  2.Sketch.Shape.brp  2.Sketch001.Shape.brp  2.Sketch002.Shape.brp  2.xml  3.FCStd  3.Sketch.Shape.brp  3.xml  V101.Cascade.FCStd  V101.Cascade.solver.FCStd  V101.Cascade.solver.Sketch.Shape.brp  V101.Cascade.solver.Sketch.solver.brp  V101.Cascade.solver.Sketch001.Shape.brp  V101.Cascade.solver.Sketch001.solver.brp  V101.Cascade.solver.Sketch002.Shape.brp  V101.Cascade.solver.Sketch002.solver.brp  V101.Cascade.solver.Sketch003.Shape.brp  V101.Cascade.solver.Sketch003.solver.brp  V101.Cascade.solver.xml  V101.Cascade.xml  V101.T002.FCStd  V101.T002.shortR.FCStd  V102.1.FCStd  V102.1.xml  V102.2.FCStd  V102.2.Sketch.Shape.brp  V102.2.Sketch001.Shape.brp  V102.2.Sketch002.Shape.brp  V102.2.xml  V102.4.FCStd  V102.4.brp  V102.4.plus1.FCStd  V102.4.plus1.brp  V102.4.plus1.xml  V102.4.xml  V102.5.FCStd  V102.5.brp  (+39 more)
include/McSolverEngine/: BRepExport.h  CApi.h  CompatModel.h  CompatSolver.h  DocumentXml.h  Engine.h  Export.h  GeometryExport.h  Version.h  ZipExtract.h
scripts/: McSolverEngine.targets  McSolverEngine_Net.targets  package_no_occt.bat  package_no_occt_dotnet.bat  package_nuget.ps1  package_use_occt.bat
src/: BRepExport.cpp  CApi.cpp  CompatModel.cpp  CompatSolver.cpp  ConsoleShim.h  DocumentSolver.cpp  DocumentSolver.h  DocumentXml.cpp  Engine.cpp  GeometryExport.cpp  ParameterValueUtils.h  PlaneTransform.cpp  PlaneTransform.h  SketchShapeBuilder.cpp  SketchShapeBuilder.h  SketcherGlobal.h  SubElementResolver.cpp  SubElementResolver.h  VarSetExpressionEngine.cpp  VarSetExpressionEngine.h  Version.cpp  WindowsAssertMode.h  ZipExtract.cpp
src/core/planegcs/: GCS.cpp  GCS.h
src/planegcs/: GCS.cpp
tests/: capi_smoke.cpp  freecad_sources_test.cpp  smoke.cpp  unit.cpp  v111t003_debug.cpp
wrapper/csharp/: McSolverEngine.Wrapper.csproj  McSolverEngineClient.cs  McSolverEngineNativeStatus.cs  McSolverEngineResponses.cs  McSolverEngineStructuredGeometry.cs
wrapper/csharp/tests/: McSolverEngine.Wrapper.Tests.csproj  Program.cs  WrapperRegressionTests.cs
wrapper/python/mcsolverengine_py/: __init__.py  _bindings.py  _engine.py  _svg.py
wrapper/python/tests/: test_wrapper.py
